--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@angular/platform-server": "^9.0.0",
     "@angular/router": "^9.0.0",
     "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
+    "alertifyjs": "^1.13.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.6.5",
+    "dynamics.js": "^1.1.5",
     "jquery": "^3.5.1",
     "popper.js": "^1.15.0",
     "rxjs": "^6.5.5",
+    "save": "^2.4.0",
     "three": "^0.117.1",
     "tslib": "^1.9.0",
     "zone.js": "^0.10.3"
